@@ -23,7 +23,8 @@ $CMS_ADMIN_PAGE=1;
 require_once("../include.php");
 require_once("../lib/classes/class.user.inc.php");
 
-$theme=get_site_preference('logintheme', 'default');
+$themeObject = cms_utils::get_theme_object();
+$theme = $themeObject->themeName;
 
 header("Content-type: text/css; charset=" . get_encoding());
 if (file_exists(dirname(__FILE__)."/themes/$theme/css/style.css"))
