@@ -8,6 +8,7 @@ Core - General:
   - Fixes thumbnail creation stuff to do some file extension checking
   - Missing button "View in English" in OneEleven theme
   - Minor adjustment to page template parsing to detect <head instead of <head>
+  - Fixes to login and admin behavior if users admin theme (or default theme) cannot be found.
   
 MenuManager
   - Fixes minor expression issue wrt the show_all parameter in the breadcrumb action
